{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 316,
  "lineage": "d20f6f20-37e4-a0cb-de0b-89f96a08633d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:496384662504:instance/i-0886d5c88a26da046",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0886d5c88a26da046",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-root-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9d8455a61882147",
            "private_dns": "ip-10-0-1-62.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.62",
            "public_dns": "ec2-54-89-42-89.compute-1.amazonaws.com",
            "public_ip": "54.89.42.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092574a45d896b89f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c596189e5f852b4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09113ac6181173057",
            "tags": {
              "Name": "terraform-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "terraform-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c596189e5f852b4c"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:496384662504:instance/i-09227474579ef2cc1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09227474579ef2cc1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-root-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08636b456807c88ed",
            "private_dns": "ip-10-0-2-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.78",
            "public_dns": "ec2-54-227-104-49.compute-1.amazonaws.com",
            "public_ip": "54.227.104.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a733f470b76a2f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c596189e5f852b4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0513ae05a67eb2681",
            "tags": {
              "Name": "terraform-2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "terraform-2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c596189e5f852b4c"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:496384662504:instance/i-0fee1aa1497db8ede",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fee1aa1497db8ede",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-root-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0760c61f81ac5c9a0",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-44-211-39-195.compute-1.amazonaws.com",
            "public_ip": "44.211.39.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053b1bec0fcb0afb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c596189e5f852b4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09113ac6181173057",
            "tags": {
              "Name": "terraform-3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "terraform-3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c596189e5f852b4c"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496384662504:internet-gateway/igw-0bc27e86877d48f27",
            "id": "igw-0bc27e86877d48f27",
            "owner_id": "496384662504",
            "tags": {
              "Name": " terraform IG"
            },
            "tags_all": {
              "Name": " terraform IG"
            },
            "vpc_id": "vpc-0f820c64166df9cd2"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:loadbalancer/app/terraform-load-balancer/7bd8a52c6a91f54f",
            "arn_suffix": "app/terraform-load-balancer/7bd8a52c6a91f54f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-load-balancer-1055487952.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:496384662504:loadbalancer/app/terraform-load-balancer/7bd8a52c6a91f54f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-027d4af0eae5857ef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0513ae05a67eb2681"
              },
              {
                "subnet_id": "subnet-09113ac6181173057"
              }
            ],
            "subnets": [
              "subnet-0513ae05a67eb2681",
              "subnet-09113ac6181173057"
            ],
            "vpc_id": "vpc-0f820c64166df9cd2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.terraform1",
            "aws_instance.terraform2",
            "aws_instance.terraform3",
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet1",
            "aws_subnet.terraform-public-subnet2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:listener/app/terraform-load-balancer/7bd8a52c6a91f54f/786fad07d03265bc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:496384662504:listener/app/terraform-load-balancer/7bd8a52c6a91f54f/786fad07d03265bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:loadbalancer/app/terraform-load-balancer/7bd8a52c6a91f54f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.terraform1",
            "aws_instance.terraform2",
            "aws_instance.terraform3",
            "aws_lb.terraform-load-balancer",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet1",
            "aws_subnet.terraform-public-subnet2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "terraform-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:listener-rule/app/terraform-load-balancer/7bd8a52c6a91f54f/786fad07d03265bc/0f08e0561681565c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:496384662504:listener-rule/app/terraform-load-balancer/7bd8a52c6a91f54f/786fad07d03265bc/0f08e0561681565c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:listener/app/terraform-load-balancer/7bd8a52c6a91f54f/786fad07d03265bc",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.terraform1",
            "aws_instance.terraform2",
            "aws_instance.terraform3",
            "aws_lb.terraform-load-balancer",
            "aws_lb_listener.terraform-listener",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet1",
            "aws_subnet.terraform-public-subnet2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701",
            "arn_suffix": "targetgroup/terraform-target-group/8a3a11c8658fc701",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f820c64166df9cd2"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terraform-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701-20230202231213864000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701",
            "target_id": "i-0886d5c88a26da046"
          },
          "dependencies": [
            "aws_instance.terraform1",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terraform-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701-20230202231221286000000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701",
            "target_id": "i-09227474579ef2cc1"
          },
          "dependencies": [
            "aws_instance.terraform2",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terraform-target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701-20230202231222819200000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:496384662504:targetgroup/terraform-target-group/8a3a11c8658fc701",
            "target_id": "i-0fee1aa1497db8ede"
          },
          "dependencies": [
            "aws_instance.terraform3",
            "aws_lb_target_group.terraform-target-group",
            "aws_security_group.terraform-load_balancer_sg",
            "aws_security_group.terraform-security-grp-rule",
            "aws_subnet.terraform-public-subnet1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terraform-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496384662504:network-acl/acl-08dfa2d2ffc8ffb2e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08dfa2d2ffc8ffb2e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "496384662504",
            "subnet_ids": [
              "subnet-0513ae05a67eb2681",
              "subnet-09113ac6181173057"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0f820c64166df9cd2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.terraform-public-subnet1",
            "aws_subnet.terraform-public-subnet2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496384662504:route-table/rtb-0ac35cbdbfee9e483",
            "id": "rtb-0ac35cbdbfee9e483",
            "owner_id": "496384662504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc27e86877d48f27",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-route-table"
            },
            "tags_all": {
              "Name": "terraform-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f820c64166df9cd2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4c7389bf486a143",
            "route_table_id": "rtb-0ac35cbdbfee9e483",
            "subnet_id": "subnet-09113ac6181173057"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_route_table.terraform-public-route-table",
            "aws_subnet.terraform-public-subnet1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c66db57c1b629f6a",
            "route_table_id": "rtb-0ac35cbdbfee9e483",
            "subnet_id": "subnet-0513ae05a67eb2681"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_route_table.terraform-public-route-table",
            "aws_subnet.terraform-public-subnet2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496384662504:security-group/sg-027d4af0eae5857ef",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-027d4af0eae5857ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "496384662504",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f820c64166df9cd2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496384662504:security-group/sg-0c596189e5f852b4c",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c596189e5f852b4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027d4af0eae5857ef"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027d4af0eae5857ef"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "496384662504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-security-grp-rule"
            },
            "tags_all": {
              "Name": "terraform-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f820c64166df9cd2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-load_balancer_sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496384662504:subnet/subnet-09113ac6181173057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09113ac6181173057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "496384662504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-subnet1"
            },
            "tags_all": {
              "Name": "terraform-public-subnet1"
            },
            "vpc_id": "vpc-0f820c64166df9cd2"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496384662504:subnet/subnet-0513ae05a67eb2681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0513ae05a67eb2681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "496384662504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-subnet2"
            },
            "tags_all": {
              "Name": "terraform-public-subnet2"
            },
            "vpc_id": "vpc-0f820c64166df9cd2"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496384662504:vpc/vpc-0f820c64166df9cd2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0479df28a6a28e41f",
            "default_route_table_id": "rtb-00d9d6b1fc361115d",
            "default_security_group_id": "sg-0952e15f0d21df22e",
            "dhcp_options_id": "dopt-071dcfba9001117b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f820c64166df9cd2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d9d6b1fc361115d",
            "owner_id": "496384662504",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}